--- a/examples/SDConfigFileExample2/example.cfg
+++ b/examples/SDConfigFileExample2/example.cfg
@@ -1,14 +1,16 @@
 # Example configuration file
-# for SDConfigFile/example/SDConfigExample
+# for SDConfigFile2/example/SDConfigExample2
 # Before plugging in the Arduino power,
 # place this file on a Micro SD card
 # and insert the card into the Arduino SD card Shield.
 
 # File format: <field> = <value>
 # Fields for the example sketch:
-#  hello = string to print in loop()
-#  doDelay = delay waitMs in loop()
-#  waitMs = time (milliseconds) to wait after printing hello
+#     hello = string to print in loop()
+#     doDelay = delay waitMs in loop()
+#     waitMs = time (milliseconds) to wait after printing hello
+# The dashes --- after a <value> reserve that byte in the file for future, possibly longer settings to be written.
+# Sd card library does not support insertion of strings, so we have to reserve the space in the file from the beginning
 
 doDelay = true--
 
@@ -20,6 +22,6 @@ hello = "All Your Base Are Belong To Us..."-------------------
 
 #test comment
 #test comment
-orphanedSetting = lolzCatz
+orphanedSetting = "lolzCatz"-----
 
 
